# LJM-cffi-bindings

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.py
src/: cffi_build.py
src/_LJM_cffi_bindings/: __init__.py
src/_ljm_cffi_bindings/: __init__.py
