[build-system]
requires = ["setuptools>=45",  "cffi>=1.15.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "LJM-cffi-bindings"
description = "Low level bindings to LabJackM library"
dependencies = ["cffi>=1.16.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/_ljm_cffi_bindings/_version.py"
